# python-api

./: .env  pyproject.toml
app/: database.py  main.py  models.py  routes.py  schemas.py
